# ts3-frequency-cutoff-plugin

./: .gitignore  CMakeLists.txt  README.md  cdb.sh  rc.sh
src/api_21/: plugin.cpp
src/api_22/: plugin.cpp
src/api_23/: plugin.cpp
src/include/: cutoff_dialog.h  freq_cutoff.h  freq_cutoff_plugin.h  ts3_log.h
